--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:31.+'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
