--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,12 +42,9 @@
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".app.MainActivity"
-            android:exported="false"
-            android:label="MainActivity" />
-        <activity
             android:name=".LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.CaringParents.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -65,9 +62,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".applications.UsageStatsActivity"
-            android:exported="true"></activity>
+
     </application>
 
 </manifest>
